Bug 152214 - The strikethrough has disappeared from the moved text in small zoom
Summary: The strikethrough has disappeared from the moved text in small zoom
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.5.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.5.0
Keywords: bibisectRequest, regression
Depends on:
Blocks: Track-Changes
  Show dependency treegraph
 
Reported: 2022-11-25 12:47 UTC by NISZ LibreOffice Team
Modified: 2022-12-20 12:11 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Sample file (5.14 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2022-11-25 12:47 UTC, NISZ LibreOffice Team
Details
Word has strikethrough (108.96 KB, image/jpeg)
2022-11-25 12:50 UTC, NISZ LibreOffice Team
Details
Missing strikethrough from moved text in Writer (79.55 KB, image/png)
2022-11-25 12:54 UTC, László Németh
Details
Correct layout in LO 7.4 (75.41 KB, image/png)
2022-11-25 13:02 UTC, László Németh
Details
Correct layout on 7.5 (1.56 MB, image/png)
2022-11-26 17:47 UTC, Khaled Hosny
Details
fix for the regressions of double underline and double strike out (1.39 KB, application/zip)
2022-11-28 12:29 UTC, László Németh
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2022-11-25 12:47:04 UTC
Description:
DOCX file with tracked changes, saved in MS Word and reopened in LO Writer, the strikethrough has disappeared from the moved text. 

Steps to Reproduce:
1. Load the attached DOCX document 


Actual Results:
The strikethrough has disappeared from the moved text. 

Expected Results:
The strikethrough does not disappear from the moved text.


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 7.5.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 24d7431876e87eba700a9f141dc8e030143a92ad
CPU threads: 4; OS: Windows 10.0 Build 19044; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL threaded
Comment 1 NISZ LibreOffice Team 2022-11-25 12:47:52 UTC
Created attachment 183767 [details]
Sample file
Comment 2 NISZ LibreOffice Team 2022-11-25 12:50:29 UTC
Created attachment 183768 [details]
Word has strikethrough
Comment 3 László Németh 2022-11-25 12:54:32 UTC
Created attachment 183769 [details]
Missing strikethrough from moved text in Writer
Comment 4 László Németh 2022-11-25 12:56:17 UTC
Note: Word has strikethrough, but also missing text moving, so that is an other bug...
Comment 5 László Németh 2022-11-25 13:02:28 UTC
Created attachment 183770 [details]
Correct layout in LO 7.4
Comment 6 Khaled Hosny 2022-11-26 17:47:27 UTC
Created attachment 183821 [details]
Correct layout on 7.5

I can’t reproduce this issue with:

Version: 7.5.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 6bf5dd8faea420aa0dbc7c429952c9868bcadb9e
CPU threads: 6; OS: Mac OS X 12.6.1; UI render: default; VCL: osx
Locale: en-EG (en_EG.UTF-8); UI: en-US
Calc: threaded
Comment 7 Commit Notification 2022-11-27 13:58:36 UTC
Khaled Hosny committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/55858a50cfb12cb6a4207bf906df676e799c1213

tdf#152214: make sure underlines are shown on small zoom levels

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 László Németh 2022-11-28 12:29:36 UTC
Created attachment 183856 [details]
fix for the regressions of double underline and double strike out
Comment 9 László Németh 2022-11-28 12:39:55 UTC
Regression from commit ba03e033d1be4bc49f2a8d6afbeecd381507b242 "vcl: Use font’s underline/strike position and size".

@Khaled: thanks for your fix! It fixes the lost double underline and double strike out, but the position of the strike out is still bad.
Comment 10 Commit Notification 2022-11-28 17:32:24 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/48e1375045a9170a5a377ede2f062803eafedf63

tdf#152214 vcl: add unit test for double lines in small zoom

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 László Németh 2022-11-28 17:35:07 UTC
New issue filed for the remaining regression: tdf#152267
Comment 12 NISZ LibreOffice Team 2022-11-30 10:49:23 UTC
Verified in:
Version: 7.5.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: bfe33d42a2381bce194cc6fe15b830902f7c8443
CPU threads: 4; OS: Windows 10.0 Build 19044; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL threaded