tdf#152214: make sure underlines are shown on small zoom levels

On small zoom levels we were ending up with underline sizes of zero, so
use ceil() instead of round() to prevent this. Also make sure double
lines don’t end up collapsing into each other by changing how the second
offset is calculated so that they is always a minimum distance between
the two.

Change-Id: I526685cebce3dddc9df6110e7ffad2729af2be93
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/143333
Tested-by: Jenkins
Reviewed-by: خالد حسني <khaled@aliftype.com>